--- a/daiba-webapp/pom.xml
+++ b/daiba-webapp/pom.xml
@@ -235,6 +235,12 @@
             <version>2.7.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.9</version>
+        </dependency>
+
     </dependencies>
 
     <build>
