--- a/daiba-webapp/src/main/resources/applicationProperties.properties
+++ b/daiba-webapp/src/main/resources/applicationProperties.properties
@@ -1,11 +1,12 @@
 #jdbc properties
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/daiba?&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&tinyInt1isBit=false
-jdbc.username=root
-jdbc.password=root
+jdbc.url=jdbc:mysql://123.207.149.13:3306/daiba
+jdbc.username=stphen
+jdbc.password=Daibawangluo520.
 jdbc.pool.maxIdle=1000
 jdbc.pool.maxActive=4000
 
+#redis properties
 redis.hostName=47.94.237.143
 redis.port=6379
 redis.password=daibawangluo123.
