今日数据功能上线

--- a/daiba-webapp/src/main/resources/applicationProperties.properties
+++ b/daiba-webapp/src/main/resources/applicationProperties.properties
@@ -1,8 +1,8 @@
 #jdbc properties
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://123.207.149.13:3306/daiba
-jdbc.username=stphen
-jdbc.password=Daibawangluo520.
+jdbc.url=jdbc:mysql://localhost:3306/daiba
+jdbc.username=root
+jdbc.password=root
 jdbc.pool.maxIdle=1000
 jdbc.pool.maxActive=4000
 
